--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
 							<img src="images/4.jpg" alt="">
 							<img src="images/5.jpg" alt="">
 							<img src="images/6.jpg" alt="">
+							<img src="images/7.jpg" alt="">
+							<img src="images/8.jpg" alt="">
+							<img src="images/9.jpg" alt="">
 						</div>
 					</div>
 				</div>
@@ -99,7 +102,7 @@
 				<div class="blog_item">
 					<div class="row">
 						<div class="col-md-12">
-							<h3 class="col-md-12"><a href="#">Заголовок статьи </a></h3>
+							<h3 class="col-md-12"><a href="articles/article-1.html">Заголовок статьи </a></h3>
 							<img src="images/6.jpg" alt="img" class="col-md-4">
 							<div class="col-md-8">
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe cumque atque aliquam temporibus? Vel voluptates, consequatur aut provident officiis. Atque, tempore sit inventore ratione impedit dolore blanditiis excepturi accusantium itaque.</p>
@@ -110,7 +113,7 @@
 				<div class="blog_item">
 					<div class="row">
 						<div class="col-md-12">
-							<h3 class="col-md-12"><a href="#">Заголовок статьи </a></h3>
+							<h3 class="col-md-12"><a href="articles/article-2.html">Заголовок статьи </a></h3>
 							<img src="images/5.jpg" alt="img" class="col-md-4">
 							<div class="col-md-8">
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe cumque atque aliquam temporibus? Vel voluptates, consequatur aut provident officiis. Atque, tempore sit inventore ratione impedit dolore blanditiis excepturi accusantium itaque.</p>
@@ -121,7 +124,7 @@
 				<div class="blog_item">
 					<div class="row">
 						<div class="col-md-12">
-							<h3 class="col-md-12"><a href="#">Заголовок статьи </a></h3>
+							<h3 class="col-md-12"><a href="articles/article-3.html">Заголовок статьи </a></h3>
 							<img src="images/4.jpg" alt="img" class="col-md-4">
 							<div class="col-md-8">
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe cumque atque aliquam temporibus? Vel voluptates, consequatur aut provident officiis. Atque, tempore sit inventore ratione impedit dolore blanditiis excepturi accusantium itaque.</p>
@@ -132,8 +135,19 @@
 				<div class="blog_item">
 					<div class="row">
 						<div class="col-md-12">
-							<h3 class="col-md-12"><a href="#">Заголовок статьи </a></h3>
+							<h3 class="col-md-12"><a href="articles/article-4.html">Заголовок статьи </a></h3>
 							<img src="images/3.jpg" alt="img" class="col-md-4">
+							<div class="col-md-8">
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe cumque atque aliquam temporibus? Vel voluptates, consequatur aut provident officiis. Atque, tempore sit inventore ratione impedit dolore blanditiis excepturi accusantium itaque.</p>
+							</div>
+						</div>
+					</div>				
+				</div>
+				<div class="blog_item">
+					<div class="row">
+						<div class="col-md-12">
+							<h3 class="col-md-12"><a href="articles/article-5.html">Заголовок статьи </a></h3>
+							<img src="images/2.jpg" alt="img" class="col-md-4">
 							<div class="col-md-8">
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe cumque atque aliquam temporibus? Vel voluptates, consequatur aut provident officiis. Atque, tempore sit inventore ratione impedit dolore blanditiis excepturi accusantium itaque.</p>
 							</div>
@@ -160,8 +174,8 @@
 
 	<footer>
 		<div class="container">
-			<h6>Developed by DarKCoder</h6>
-			<h6>© 2016 || Все права защищены.</h6>
+			<h2>Mobile Design</h2>
+			<h4>© 2016 Mobile Design || Developed by DarKCoder</h4>
 		</div>
 	</footer>
 
