--- a/portfolio.html
+++ b/portfolio.html
@@ -14,9 +14,6 @@
 	<link rel="shortcut icon" href="favicon.png" />
 	<link rel="stylesheet" href="libs/bootstrap/bootstrap-grid-3.3.1.min.css" />
 	<link rel="stylesheet" href="libs/font-awesome-4.2.0/css/font-awesome.min.css" />
-	<link rel="stylesheet" href="libs/fancybox/jquery.fancybox.css" />
-	<link rel="stylesheet" href="libs/owl-carousel/owl.carousel.css" />
-	<link rel="stylesheet" href="libs/countdown/jquery.countdown.css" />
 	<link rel="stylesheet" href="css/fonts.css" />
 	<link rel="stylesheet" href="css/main.css" />
 	<link rel="stylesheet" href="css/portfolio.css" />
@@ -180,8 +177,8 @@
 
 	<footer>
 		<div class="container">
-			<h6>Developed by DarKCoder</h6>
-			<h6>© 2016 || Все права защищены.</h6>
+			<h2>Mobile Design</h2>
+			<h4>© 2016 Mobile Design || Developed by DarKCoder</h4>
 		</div>
 	</footer>
 	<!--[if lt IE 9]>
@@ -191,16 +188,18 @@
 	<script src="libs/respond/respond.min.js"></script>
 	<![endif]-->
 	<script src="libs/jquery/jquery-1.11.1.min.js"></script>
-	<script src="libs/jquery-mousewheel/jquery.mousewheel.min.js"></script>
-	<script src="libs/fancybox/jquery.fancybox.pack.js"></script>
-	<script src="libs/waypoints/waypoints-1.6.2.min.js"></script>
-	<script src="libs/scrollto/jquery.scrollTo.min.js"></script>
-	<script src="libs/owl-carousel/owl.carousel.min.js"></script>
-	<script src="libs/countdown/jquery.plugin.js"></script>
-	<script src="libs/countdown/jquery.countdown.min.js"></script>
-	<script src="libs/countdown/jquery.countdown-ru.js"></script>
-	<script src="libs/landing-nav/navigation.js"></script>
-	<script src="js/common.js"></script>
+	<script>
+		$(document).ready(function() {
+
+			$(".auth_button").click(function(){
+				$(this).next().slideToggle();
+			});
+
+			$(".main_menu_button").click(function(){
+				$('.main_menu ul').slideToggle();
+			});
+		});
+	</script>
 	<!-- Yandex.Metrika counter --><!-- /Yandex.Metrika counter -->
 	<!-- Google Analytics counter --><!-- /Google Analytics counter -->
 </body>
