Добавил нумерацию заголовков в index.html

--- a/index.html
+++ b/index.html
@@ -35,30 +35,30 @@
 		<div id="slider-wrap">
 			<div id="slide-1" class="slide">
 				<div>
-					<h1>Vestibulum</h1>
+					<h1>Vestibulum - 1</h1>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, consectetur quis quas molestiae ea sed.</p>
 				</div>
 			</div>
 			<div id="slide-2" class="slide">
-				<h1>Vestibulum</h1>
+				<h1>Vestibulum - 2</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, consectetur quis quas molestiae ea sed.</p>
 			</div>
 			<div id="slide-3" class="slide">
-				<h1>Vestibulum</h1>
+				<h1>Vestibulum - 3</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, consectetur quis quas molestiae ea sed.</p>
 			</div>
 			<div id="slide-1" class="slide">
 				<div>
-					<h1>Vestibulum</h1>
+					<h1>Vestibulum - 4</h1>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, consectetur quis quas molestiae ea sed.</p>
 				</div>
 			</div>
 			<div id="slide-2" class="slide">
-				<h1>Vestibulum</h1>
+				<h1>Vestibulum - 5</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, consectetur quis quas molestiae ea sed.</p>
 			</div>
 			<div id="slide-3" class="slide">
-				<h1>Vestibulum</h1>
+				<h1>Vestibulum - 6</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, consectetur quis quas molestiae ea sed.</p>
 			</div>
 		</div>	
