--- a/index.html
+++ b/index.html
@@ -1,46 +1,41 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Learning Canvas</title>
-    <style type="text/css">
-    	canvas {
-    		border: 1px double #ccc;
-    		margin: 20px 100px;
-    	}
-    </style>
-  </head>
-  <body>
-    <canvas id="canvas14">Fall Back</canvas>
-    <br>
-    <canvas id="canvas13">Fall Back</canvas>
-    <br>
-    <canvas id="canvas12">Fall Back</canvas>
-    <br>
-    <canvas id="canvas11">Fall Back</canvas>
-    <br>
-    <canvas id="canvas10">Fall Back</canvas>
-    <br>
-    <canvas id="canvas9">Fall Back</canvas>
-    <br>
-    <canvas id="canvas8">Fall Back</canvas>
-    <br>
-    <canvas id="canvas7">Fall Back</canvas>
-    <br>
-    <canvas id="canvas6">Fall Back</canvas>
-    <br>
-    <canvas id="canvas5">Fall Back</canvas>
-    <br>
-    <canvas id="canvas4">Fall Back</canvas>
-    <br>
-    <canvas id="canvas3">Fall Back</canvas>
-    <br>
-    <canvas id="canvas2">Fall Back</canvas>
-    <br>
-    <canvas id="canvas1">Fall Back</canvas>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Podcards In Space</title>
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
+</head>
+<body>
+	<section class="menu">
+		<div class="menu_wrap">
+			<div class="humburger"><i class="fa fa-bars" aria-hidden="true"></i></div>
+			<div class="configs">
+				<h1 class="title">Скорость</h1>
+				<ul>
+					<li id="faster">Ускорить</li>
+					<li id="slower">Замедлить</li>
+					<li id="standart">Базовый</li>
+				</ul>
+				<h1 class="title">Тип элементов</h1>
+				<ul>
+					<li id="circle">Круги</li>
+					<li id="square">Квадраты</li>
+					<li id="letter">Буквы</li>
+					<li id="image">Картины</li>
+				</ul>
+				<h1 class="title">Направление</h1>
+				<ul>
+					<li id="toMyself">На себя</li>
+					<li id="outMyself">От себя</li>
+				</ul>
+			</div>
+		</div>
+	</section>
 
-		<img src="img.jpg" id="img" style="display:none">
-
-    <script type="text/javascript" src="main.js"></script>
-  </body>
+	<canvas id="podcards"></canvas>
+	<script src="js/requestAnimationFramePolyfill.js"></script>
+	<script src="js/main.js"></script>
+</body>
 </html>
