--- a/index.html
+++ b/index.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 	<meta charset="UTF-8">
-	<title>Episode 23</title>
-	<style type="text/css">
-		body {
-			margin: 0;
-			padding: 0;
-		}
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Fractals</title>
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 
-		canvas {
-			display: block;
-		}
 	</style>
 </head>
 <body>
+	<section class="menu">
+		<div class="menu_wrap">
+			<div class="humburger">
+				<div class="humburgerInner"></div>
+			</div>
+			<div class="configs">
+				<h1 class="title">Type</h1>
+				<ul>
+					<li id="first">First</li>
+					<li id="second">Second</li>
+					<li id="third">Third</li>
+				</ul>
+			</div>
+		</div>
+	</section>
+
 	<canvas id="canvas"></canvas>
 	<script src="main.js"></script>
 </body>
