--- a/index.html
+++ b/index.html
@@ -1,31 +1,104 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Fractals</title>
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
-
-	</style>
+	<title>Majestic</title>
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-	<section class="menu">
-		<div class="menu_wrap">
-			<div class="humburger">
-				<div class="humburgerInner"></div>
+	<header>
+		<div class="header_bg"></div>
+		<div class="header_wrap">
+			<div class="menuLine">
+				<div class="logo">
+					<h3>WUSHU</h3>
+				</div>
+				<nav class="menu">
+					<li>Item1</li>
+					<li>Item2</li>
+					<li>Item3</li>	
+				</nav>
 			</div>
-			<div class="configs">
-				<h1 class="title">Type</h1>
-				<ul>
-					<li id="first">First</li>
-					<li id="second">Second</li>
-					<li id="third">Third</li>
-				</ul>
+
+
+			<div class="header_firstText">
+				<div class="header_text">
+					<p class="header_text_1">Школа Кунг-Фу</p>
+					<p class="header_text_2">В Ташкенте</p>
+				</div>
 			</div>
 		</div>
+
+		<div class="header_traingles"></div>
+	</header>
+
+	<section class="directions">
+		<ul class="directions_ul">
+			<li>Оздоровительное УШУ</li>
+			<li>Традиционное УШУ</li>
+			<li>Боевое УШУ</li>
+			<li>Большое кол-во различных стилей</li>
+		</ul>
 	</section>
 
-	<canvas id="canvas"></canvas>
-	<script src="main.js"></script>
+	<section class="benefit">
+		<hr class="line">
+		<h1 class="benefit_title">Польза занятий УШУ</h1>
+		<div class="benefit_wrap">	
+			<div class="benefit_card">
+				<h1 class="benefit_card_title">Улучшение здоровья</h1>
+				<p>Ни для кого не секрет, что занятие спортом является полезным для здоровья занятием.</p>
+			</div>
+
+			<div class="benefit_card">
+				<h1 class="benefit_card_title">Выроботка воли</h1>
+				<p>Воля является одним из самых выжных свойств воина.
+					Потому и у нас Воле уделяется не мало внимания, выражающихся в различных упражнениях и заданиях.
+				</p>
+			</div>
+
+			<div class="benefit_card">
+				<h1 class="benefit_card_title">Выроботка дисциплины</h1>
+				<p>Дисциплина так же является очень важным аспектом в УШУ. Нарушение дисциплины на занятиях не приемлимы.</p>
+			</div>
+			
+			<div class="benefit_card">
+				<h1 class="benefit_card_title">Увеличение выносливости</h1>
+				<p>Благодаря занятиям УШУ уже через несколько недель тренировок пробежать 1-2-3 км не составит большого труда. Так же уделяется не малое внимание дыханию.</p>
+			</div>
+			
+			<div class="benefit_card">
+				<h1 class="benefit_card_title">Увеличение мускулатуры</h1>
+				<p>Благодаря большому колличеству стилей, оружий, позиций увеличение мускулатуры неизбежно.</p>
+			</div>
+			
+			<div class="benefit_card">
+				<h1 class="benefit_card_title">Новый взгляд на мир</h1>
+				<p>УШУ - это не только способ защиты себя и своих близких, но и немалая философия накопленная за тысячилетия. Занимаясь с нами вы так же будете получать не мало теории от Учителя. Благодаря чему вы и получите новый взгляд на мир.</p>
+			</div>
+
+			<div class="benefit_card">
+				<h1 class="benefit_card_title">Познание себя</h1>
+				<p>Благодаря УШУ вы начнете познавать себя с самых различных сторон, буд то физически, интеллектуально или духовно.</p>
+			</div>
+
+			<div class="benefit_card">
+				<h1 class="benefit_card_title">Самозащита</h1>
+				<p>В течении не долгого времени вы научитесь защищать не только себя но и окружающих от тех кто применяет свои не с самой лучшей стороны.</p>
+			</div>
+		</div>
+
+	</section>
+
+	<script src="js/main.js"></script>
 </body>
 </html>
+				<!-- 	<li>Улучшение здоровья</li>
+					<li>Выроботка воли</li>
+					<li>Выроботка дисциплины</li>
+					<li>Увеличение выносливости</li>
+					<li>Увеличение мускулатуры</li>
+					<li>Новый взгляд на мир</li>
+					<li>Познание себя</li>
+					<li>Способность защитить не только себя но и других</li> -->
