--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
 	</section>
 
 	<section class="benefit">
-		<hr class="line">
-		<h1 class="benefit_title">Польза занятий УШУ</h1>
+		<h1 class="section_title">Польза занятий УШУ</h1>
 		<div class="benefit_wrap">	
 			<div class="benefit_card">
 				<h1 class="benefit_card_title">Улучшение здоровья</h1>
@@ -88,17 +87,69 @@
 				<p>В течении не долгого времени вы научитесь защищать не только себя но и окружающих от тех кто применяет свои не с самой лучшей стороны.</p>
 			</div>
 		</div>
+	</section>
 
+	<section class="styles">
+		<h1 class="section_title">Стили УШУ</h1>
+
+		<div class="styles_cards">
+			<div class="styles_card">
+				<div class="style_card_visibleBlock"></div>
+				<div class="style_card_hiddenBlock">
+					<div class="style_card_info">
+						<h1 class="style_card_name">Винчун</h1>
+						<a class="style_card_button" href="http://ushu.uz/publication/5.html" target="_blank">Узнать больше</a>
+					</div>
+				</div>
+			</div>
+			<div class="styles_card">
+				<div class="style_card_visibleBlock"></div>
+				<div class="style_card_hiddenBlock">
+					<div class="style_card_info">
+						<h1 class="style_card_name">Винчун</h1>
+						<a class="style_card_button" href="http://ushu.uz/publication/5.html" target="_blank">Узнать больше</a>
+					</div>
+				</div>
+			</div>
+			<div class="styles_card">
+				<div class="style_card_visibleBlock"></div>
+				<div class="style_card_hiddenBlock">
+					<div class="style_card_info">
+						<h1 class="style_card_name">Винчун</h1>
+						<a class="style_card_button" href="http://ushu.uz/publication/5.html" target="_blank">Узнать больше</a>
+					</div>
+				</div>
+			</div>
+			<div class="styles_card">
+				<div class="style_card_visibleBlock"></div>
+				<div class="style_card_hiddenBlock">
+					<div class="style_card_info">
+						<h1 class="style_card_name">Винчун</h1>
+						<a class="style_card_button" href="http://ushu.uz/publication/5.html" target="_blank">Узнать больше</a>
+					</div>
+				</div>
+			</div>
+			<div class="styles_card">
+				<div class="style_card_visibleBlock"></div>
+				<div class="style_card_hiddenBlock">
+					<div class="style_card_info">
+						<h1 class="style_card_name">Винчун</h1>
+						<a class="style_card_button" href="http://ushu.uz/publication/5.html" target="_blank">Узнать больше</a>
+					</div>
+				</div>
+			</div>
+			<div class="styles_card">
+				<div class="style_card_visibleBlock"></div>
+				<div class="style_card_hiddenBlock">
+					<div class="style_card_info">
+						<h1 class="style_card_name">Винчун</h1>
+						<a class="style_card_button" href="http://ushu.uz/publication/5.html" target="_blank">Узнать больше</a>
+					</div>
+				</div>
+			</div>
+		</div>
 	</section>
 
 	<script src="js/main.js"></script>
 </body>
 </html>
-				<!-- 	<li>Улучшение здоровья</li>
-					<li>Выроботка воли</li>
-					<li>Выроботка дисциплины</li>
-					<li>Увеличение выносливости</li>
-					<li>Увеличение мускулатуры</li>
-					<li>Новый взгляд на мир</li>
-					<li>Познание себя</li>
-					<li>Способность защитить не только себя но и других</li> -->
