--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			</div>
 
 			<div class="benefit_card">
-				<h1 class="benefit_card_title">Выроботка воли</h1>
+				<h1 class="benefit_card_title">Выработка воли</h1>
 				<p>Воля является одним из самых выжных свойств воина.
 					Потому и у нас Воле уделяется не мало внимания, выражающихся в различных упражнениях и заданиях.
 				</p>
@@ -94,7 +94,7 @@
 
 		<div class="styles_cards">
 			<div class="styles_card">
-				<div class="style_card_visibleBlock"></div>
+				<div class="style_card_visibleBlock style_card_visibleBlock-1"></div>
 				<div class="style_card_hiddenBlock">
 					<div class="style_card_info">
 						<h1 class="style_card_name">Винчун</h1>
@@ -103,47 +103,47 @@
 				</div>
 			</div>
 			<div class="styles_card">
-				<div class="style_card_visibleBlock"></div>
+				<div class="style_card_visibleBlock style_card_visibleBlock-2"></div>
 				<div class="style_card_hiddenBlock">
 					<div class="style_card_info">
-						<h1 class="style_card_name">Винчун</h1>
-						<a class="style_card_button" href="http://ushu.uz/publication/5.html" target="_blank">Узнать больше</a>
+						<h1 class="style_card_name">Тайцзицюань</h1>
+						<a class="style_card_button" href="http://ushu.uz/publication/17.html" target="_blank">Узнать больше</a>
 					</div>
 				</div>
 			</div>
 			<div class="styles_card">
-				<div class="style_card_visibleBlock"></div>
+				<div class="style_card_visibleBlock style_card_visibleBlock-3"></div>
 				<div class="style_card_hiddenBlock">
 					<div class="style_card_info">
-						<h1 class="style_card_name">Винчун</h1>
-						<a class="style_card_button" href="http://ushu.uz/publication/5.html" target="_blank">Узнать больше</a>
+						<h1 class="style_card_name">Шаолиньцюань</h1>
+						<a class="style_card_button" href="http://ushu.uz/publication/32.html" target="_blank">Узнать больше</a>
 					</div>
 				</div>
 			</div>
 			<div class="styles_card">
-				<div class="style_card_visibleBlock"></div>
+				<div class="style_card_visibleBlock style_card_visibleBlock-4"></div>
 				<div class="style_card_hiddenBlock">
 					<div class="style_card_info">
-						<h1 class="style_card_name">Винчун</h1>
-						<a class="style_card_button" href="http://ushu.uz/publication/5.html" target="_blank">Узнать больше</a>
+						<h1 class="style_card_name">Цигун</h1>
+						<a class="style_card_button" href="http://ushu.uz/publication/33.html" target="_blank">Узнать больше</a>
 					</div>
 				</div>
 			</div>
 			<div class="styles_card">
-				<div class="style_card_visibleBlock"></div>
+				<div class="style_card_visibleBlock style_card_visibleBlock-5"></div>
 				<div class="style_card_hiddenBlock">
 					<div class="style_card_info">
-						<h1 class="style_card_name">Винчун</h1>
-						<a class="style_card_button" href="http://ushu.uz/publication/5.html" target="_blank">Узнать больше</a>
+						<h1 class="style_card_name">Багуачжан</h1>
+						<a class="style_card_button" href="http://ushu.uz/publication/3.html" target="_blank">Узнать больше</a>
 					</div>
 				</div>
 			</div>
 			<div class="styles_card">
-				<div class="style_card_visibleBlock"></div>
+				<div class="style_card_visibleBlock style_card_visibleBlock-6"></div>
 				<div class="style_card_hiddenBlock">
 					<div class="style_card_info">
-						<h1 class="style_card_name">Винчун</h1>
-						<a class="style_card_button" href="http://ushu.uz/publication/5.html" target="_blank">Узнать больше</a>
+						<h1 class="style_card_name">Бацзицюань</h1>
+						<a class="style_card_button" href="http://ushu.uz/publication/4.html" target="_blank">Узнать больше</a>
 					</div>
 				</div>
 			</div>
