--- a/index.html
+++ b/index.html
@@ -1,155 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Majestic</title>
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<title>Podcards In Space</title>
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-	<header>
-		<div class="header_bg"></div>
-		<div class="header_wrap">
-			<div class="menuLine">
-				<div class="logo">
-					<h3>WUSHU</h3>
-				</div>
-				<nav class="menu">
-					<li>Item1</li>
-					<li>Item2</li>
-					<li>Item3</li>	
-				</nav>
+	<section class="menu">
+		<div class="menu_wrap">
+			<div class="humburger">
+				<div class="humburgerInner"></div>
 			</div>
-
-
-			<div class="header_firstText">
-				<div class="header_text">
-					<p class="header_text_1">Школа Кунг-Фу</p>
-					<p class="header_text_2">В Ташкенте</p>
-				</div>
-			</div>
-		</div>
-
-		<div class="header_traingles"></div>
-	</header>
-
-	<section class="directions">
-		<ul class="directions_ul">
-			<li>Оздоровительное УШУ</li>
-			<li>Традиционное УШУ</li>
-			<li>Боевое УШУ</li>
-			<li>Большое кол-во различных стилей</li>
-		</ul>
-	</section>
-
-	<section class="benefit">
-		<h1 class="section_title">Польза занятий УШУ</h1>
-		<div class="benefit_wrap">	
-			<div class="benefit_card">
-				<h1 class="benefit_card_title">Улучшение здоровья</h1>
-				<p>Ни для кого не секрет, что занятие спортом является полезным для здоровья занятием.</p>
-			</div>
-
-			<div class="benefit_card">
-				<h1 class="benefit_card_title">Выработка воли</h1>
-				<p>Воля является одним из самых выжных свойств воина.
-					Потому и у нас Воле уделяется не мало внимания, выражающихся в различных упражнениях и заданиях.
-				</p>
-			</div>
-
-			<div class="benefit_card">
-				<h1 class="benefit_card_title">Выроботка дисциплины</h1>
-				<p>Дисциплина так же является очень важным аспектом в УШУ. Нарушение дисциплины на занятиях не приемлимы.</p>
-			</div>
-			
-			<div class="benefit_card">
-				<h1 class="benefit_card_title">Увеличение выносливости</h1>
-				<p>Благодаря занятиям УШУ уже через несколько недель тренировок пробежать 1-2-3 км не составит большого труда. Так же уделяется не малое внимание дыханию.</p>
-			</div>
-			
-			<div class="benefit_card">
-				<h1 class="benefit_card_title">Увеличение мускулатуры</h1>
-				<p>Благодаря большому колличеству стилей, оружий, позиций увеличение мускулатуры неизбежно.</p>
-			</div>
-			
-			<div class="benefit_card">
-				<h1 class="benefit_card_title">Новый взгляд на мир</h1>
-				<p>УШУ - это не только способ защиты себя и своих близких, но и немалая философия накопленная за тысячилетия. Занимаясь с нами вы так же будете получать не мало теории от Учителя. Благодаря чему вы и получите новый взгляд на мир.</p>
-			</div>
-
-			<div class="benefit_card">
-				<h1 class="benefit_card_title">Познание себя</h1>
-				<p>Благодаря УШУ вы начнете познавать себя с самых различных сторон, буд то физически, интеллектуально или духовно.</p>
-			</div>
-
-			<div class="benefit_card">
-				<h1 class="benefit_card_title">Самозащита</h1>
-				<p>В течении не долгого времени вы научитесь защищать не только себя но и окружающих от тех кто применяет свои не с самой лучшей стороны.</p>
+			<div class="configs">
+				<h1 class="title">Скорость</h1>
+				<ul>
+					<li id="faster">Ускорить</li>
+					<li id="slower">Замедлить</li>
+					<li id="standart">Базовый</li>
+				</ul>
+				<h1 class="title">Тип элементов</h1>
+				<ul>
+					<li id="circle">Круги</li>
+					<li id="square">Квадраты</li>
+					<li id="letter">Буквы</li>
+					<li id="image">Картины</li>
+				</ul>
+				<h1 class="title">Направление</h1>
+				<ul>
+					<li id="toMyself">На себя</li>
+					<li id="outMyself">От себя</li>
+				</ul>
 			</div>
 		</div>
 	</section>
 
-	<section class="styles">
-		<h1 class="section_title">Стили УШУ</h1>
-
-		<div class="styles_cards">
-			<div class="styles_card">
-				<div class="style_card_visibleBlock style_card_visibleBlock-1"></div>
-				<div class="style_card_hiddenBlock">
-					<div class="style_card_info">
-						<h1 class="style_card_name">Винчун</h1>
-						<a class="style_card_button" href="http://ushu.uz/publication/5.html" target="_blank">Узнать больше</a>
-					</div>
-				</div>
-			</div>
-			<div class="styles_card">
-				<div class="style_card_visibleBlock style_card_visibleBlock-2"></div>
-				<div class="style_card_hiddenBlock">
-					<div class="style_card_info">
-						<h1 class="style_card_name">Тайцзицюань</h1>
-						<a class="style_card_button" href="http://ushu.uz/publication/17.html" target="_blank">Узнать больше</a>
-					</div>
-				</div>
-			</div>
-			<div class="styles_card">
-				<div class="style_card_visibleBlock style_card_visibleBlock-3"></div>
-				<div class="style_card_hiddenBlock">
-					<div class="style_card_info">
-						<h1 class="style_card_name">Шаолиньцюань</h1>
-						<a class="style_card_button" href="http://ushu.uz/publication/32.html" target="_blank">Узнать больше</a>
-					</div>
-				</div>
-			</div>
-			<div class="styles_card">
-				<div class="style_card_visibleBlock style_card_visibleBlock-4"></div>
-				<div class="style_card_hiddenBlock">
-					<div class="style_card_info">
-						<h1 class="style_card_name">Цигун</h1>
-						<a class="style_card_button" href="http://ushu.uz/publication/33.html" target="_blank">Узнать больше</a>
-					</div>
-				</div>
-			</div>
-			<div class="styles_card">
-				<div class="style_card_visibleBlock style_card_visibleBlock-5"></div>
-				<div class="style_card_hiddenBlock">
-					<div class="style_card_info">
-						<h1 class="style_card_name">Багуачжан</h1>
-						<a class="style_card_button" href="http://ushu.uz/publication/3.html" target="_blank">Узнать больше</a>
-					</div>
-				</div>
-			</div>
-			<div class="styles_card">
-				<div class="style_card_visibleBlock style_card_visibleBlock-6"></div>
-				<div class="style_card_hiddenBlock">
-					<div class="style_card_info">
-						<h1 class="style_card_name">Бацзицюань</h1>
-						<a class="style_card_button" href="http://ushu.uz/publication/4.html" target="_blank">Узнать больше</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
+	<canvas id="podcards"></canvas>
+	<script src="js/requestAnimationFramePolyfill.js"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
