--- a/index.html
+++ b/index.html
@@ -1,49 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
-	<title>JavaScript Projects</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="main.css">
+	<meta charset="UTF-8">
+	<title>DLUX</title>
+	<link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
+	<link rel="stylesheet" type="text/css" href="styles/normalize.css">
+	<link rel="stylesheet" type="text/css" href="styles/animate.css">
+	<link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 <body>
-	<section class="projects_cards">
-			<div class="projects_card">
-				<figure>
-					<div class="project_card_img project_card_img-1"></div>
-					<figcaption>
-						<h1 class="projects_card_name">Carusel</h1>
-						<a class="projects_card_button" href="carusel/index.html" target="_blank">Learn More</a>
-					</figcaption>
-				</figure>		
+	<div class="background"></div>
+	<div class="wrapper">
+		<section class="first-slide">
+			<div class="greeting_block">
+				<img src="img/logo.png" class="logo animated">
+				<div class="greeting_text greeting_text_next">
+					<h1 class="logo_text1 animated">DLUX</h1>
+					<p class="logo_text2 animated">Dance Studio</p>
+				</div>
 			</div>
-			<div class="projects_card">
-				<figure>
-					<div class="project_card_img project_card_img-2"></div>
-					<figcaption>
-						<h1 class="projects_card_name">Postcards</h1>
-						<a class="projects_card_button" href="PodcardsInSpace/index.html" target="_blank">Learn More</a>
-					</figcaption>
-				</figure>		
+		</section>
+
+		<section class="second-slide">
+			<div class="first_images images">
+				<img src="img/img2.jpg" alt="img" class="img2 img animated">
+				<img src="img/img1.jpg" alt="img" class="img1 img animated">
+				<img src="img/img3.jpg" alt="img" class="img3 img animated">
 			</div>
-			<div class="projects_card">
-				<figure>
-					<div class="project_card_img project_card_img-3"></div>
-					<figcaption>
-						<h1 class="projects_card_name">Spiral</h1>
-						<a class="projects_card_button" href="spiral/index.html" target="_blank">Learn More</a>
-					</figcaption>
-				</figure>		
+
+			<div class="second_images images">
+				<img src="img/img4.jpg" alt="img" class="img4 img animated">
+				<img src="img/img5.jpg" alt="img" class="img5 img animated">
+				<img src="img/img6.jpg" alt="img" class="img6 img animated">
 			</div>
-			<div class="projects_card">
-				<figure>
-					<div class="project_card_img project_card_img-4"></div>
-					<figcaption>
-						<h1 class="projects_card_name">Fractals</h1>
-						<a class="projects_card_button" href="fractals/index.html" target="_blank">Learn More</a>
-					</figcaption>
-				</figure>		
+			<div class="third_images images">
+				<img src="img/img7.jpg" alt="img" class="img7 img animated">
 			</div>
-	</section>
+		</section>
+	</div>
+	<script src="js/main.js"></script>
 </body>
 </html>
