--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			</div>
 
 			<div class="img3_bottom animated">
-				<h1 class="img3_text1">Happy Kids</h1>
+				<h1 class="img3_text1">"Happy Kids"</h1>
 				<h1 class="img3_text2">300 000</h1>
 			</div>
 		</div>
