--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@
 					</figcaption>
 				</figure>		
 			</div>
+			<div class="projects_card">
+				<figure>
+					<div class="project_card_img project_card_img-5"></div>
+					<figcaption>
+						<h1 class="projects_card_name">Lissajous Curve</h1>
+						<a class="projects_card_button" href="lissajous/index.html" target="_blank">Learn More</a>
+					</figcaption>
+				</figure>		
+			</div>
 	</section>
 </body>
 </html>
